build/OPLangParser.py
# Generated from OPLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OPLangParser ( Parser ):

    grammarFileName = "OPLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'boolean'", "'break'", "'class'", "'continue'", 
                     "'do'", "'else'", "'extends'", "'float'", "'if'", "'int'", 
                     "'new'", "'string'", "'then'", "'for'", "'return'", 
                     "'true'", "'false'", "'void'", "'nil'", "'this'", "'final'", 
                     "'static'", "'to'", "'downto'", "'+'", "'-'", "'*'", 
                     "'/'", "'\\'", "'%'", "'!='", "'=='", "'<'", "'>'", 
                     "'<='", "'>='", "'||'", "'&&'", "'!'", "'^'", "':='", 
                     "'['", "']'", "'('", "')'", "'{'", "'}'", "';'", "':'", 
                     "'.'", "','", "'~'", "'&'" ]

    symbolicNames = [ "<INVALID>", "BOOL", "BREAK", "CLASS", "CONTINUE", 
                      "DO", "ELSE", "EXTENDS", "FLOAT", "IF", "INT", "NEW", 
                      "STR", "THEN", "FOR", "RETURN", "TRUE", "FALSE", "VOID", 
                      "NIL", "THIS", "FINAL", "STATIC", "TO", "DOWNTO", 
                      "ADD", "SUB", "MUL", "FLT_DIV", "INT_DIV", "MOD", 
                      "NOT_EQ", "EQ", "LESS", "GREATER", "LESS_EQ", "GREATER_EQ", 
                      "LOGIC_OR", "LOGIC_AND", "LOGIC_NOT", "CONCAT", "ASSIGN", 
                      "L_SQUARE", "R_SQUARE", "L_PAREN", "R_PAREN", "L_CURL", 
                      "R_CURL", "SEMI", "COLON", "DOT", "COMMA", "TILDE", 
                      "AMPERSAND", "LINECMT", "BLOCKCMT", "INT_LIT", "FLT_LIT", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "STR_LIT", "ID", 
                      "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_classdecl = 3
    RULE_memberdecl = 4
    RULE_memberlist = 5
    RULE_member = 6
    RULE_attributedecl = 7
    RULE_static_atom = 8
    RULE_final_atom = 9
    RULE_ampersand_atom = 10
    RULE_attributelist = 11
    RULE_attributeprime = 12
    RULE_methoddecl = 13
    RULE_return_type_method = 14
    RULE_vardecllist = 15
    RULE_vardecl = 16
    RULE_paramdecl = 17
    RULE_paramlist = 18
    RULE_paramprime = 19
    RULE_param = 20
    RULE_constructordecl = 21
    RULE_default_contructor = 22
    RULE_copy_contructor = 23
    RULE_userdef_contructor = 24
    RULE_destructordecl = 25
    RULE_destructor = 26
    RULE_blockstmt = 27
    RULE_blockstmt_method = 28
    RULE_vardeclstmt = 29
    RULE_varlist = 30
    RULE_varitem = 31
    RULE_assignlist = 32
    RULE_stmtlist = 33
    RULE_stmt = 34
    RULE_funct_call = 35
    RULE_functparam = 36
    RULE_functprime = 37
    RULE_ifstmt = 38
    RULE_forstmt = 39
    RULE_breakstmt = 40
    RULE_continuestmt = 41
    RULE_returnstmt = 42
    RULE_assigndecl = 43
    RULE_assignstmt = 44
    RULE_lhs = 45
    RULE_expr = 46
    RULE_relexpr = 47
    RULE_equalexpr = 48
    RULE_logicexpr = 49
    RULE_addsubexpr = 50
    RULE_muldivexpr = 51
    RULE_expoexpr = 52
    RULE_notexpr = 53
    RULE_unaryexpr = 54
    RULE_indexingexpr = 55
    RULE_dotexpr = 56
    RULE_primaryexpr = 57
    RULE_exprlist = 58
    RULE_exprprime = 59
    RULE_dotchain = 60
    RULE_literal = 61
    RULE_array_lit = 62
    RULE_arraylist = 63
    RULE_arrayprime = 64
    RULE_array_element = 65
    RULE_idlist = 66
    RULE_primitive_type = 67
    RULE_return_type = 68
    RULE_array_type = 69
    RULE_decl_type = 70
    RULE_decl_type2 = 71

    ruleNames =  [ "program", "decllist", "decl", "classdecl", "memberdecl", 
                   "memberlist", "member", "attributedecl", "static_atom", 
                   "final_atom", "ampersand_atom", "attributelist", "attributeprime", 
                   "methoddecl", "return_type_method", "vardecllist", "vardecl", 
                   "paramdecl", "paramlist", "paramprime", "param", "constructordecl", 
                   "default_contructor", "copy_contructor", "userdef_contructor", 
                   "destructordecl", "destructor", "blockstmt", "blockstmt_method", 
                   "vardeclstmt", "varlist", "varitem", "assignlist", "stmtlist", 
                   "stmt", "funct_call", "functparam", "functprime", "ifstmt", 
                   "forstmt", "breakstmt", "continuestmt", "returnstmt", 
                   "assigndecl", "assignstmt", "lhs", "expr", "relexpr", 
                   "equalexpr", "logicexpr", "addsubexpr", "muldivexpr", 
                   "expoexpr", "notexpr", "unaryexpr", "indexingexpr", "dotexpr", 
                   "primaryexpr", "exprlist", "exprprime", "dotchain", "literal", 
                   "array_lit", "arraylist", "arrayprime", "array_element", 
                   "idlist", "primitive_type", "return_type", "array_type", 
                   "decl_type", "decl_type2" ]

    EOF = Token.EOF
    BOOL=1
    BREAK=2
    CLASS=3
    CONTINUE=4
    DO=5
    ELSE=6
    EXTENDS=7
    FLOAT=8
    IF=9
    INT=10
    NEW=11
    STR=12
    THEN=13
    FOR=14
    RETURN=15
    TRUE=16
    FALSE=17
    VOID=18
    NIL=19
    THIS=20
    FINAL=21
    STATIC=22
    TO=23
    DOWNTO=24
    ADD=25
    SUB=26
    MUL=27
    FLT_DIV=28
    INT_DIV=29
    MOD=30
    NOT_EQ=31
    EQ=32
    LESS=33
    GREATER=34
    LESS_EQ=35
    GREATER_EQ=36
    LOGIC_OR=37
    LOGIC_AND=38
    LOGIC_NOT=39
    CONCAT=40
    ASSIGN=41
    L_SQUARE=42
    R_SQUARE=43
    L_PAREN=44
    R_PAREN=45
    L_CURL=46
    R_CURL=47
    SEMI=48
    COLON=49
    DOT=50
    COMMA=51
    TILDE=52
    AMPERSAND=53
    LINECMT=54
    BLOCKCMT=55
    INT_LIT=56
    FLT_LIT=57
    ILLEGAL_ESCAPE=58
    UNCLOSE_STRING=59
    STR_LIT=60
    ID=61
    WS=62
    ERROR_CHAR=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(OPLangParser.DecllistContext,0)


        def EOF(self):
            return self.getToken(OPLangParser.EOF, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = OPLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.decllist()
            self.state = 145
            self.match(OPLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(OPLangParser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(OPLangParser.DecllistContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_decllist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecllist" ):
                return visitor.visitDecllist(self)
            else:
                return visitor.visitChildren(self)




    def decllist(self):

        localctx = OPLangParser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 8, 10, 12, 21, 61]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.decl()
                self.state = 148
                self.decllist()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classdecl(self):
            return self.getTypedRuleContext(OPLangParser.ClassdeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(OPLangParser.VardeclContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = OPLangParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.classdecl()
                pass
            elif token in [1, 8, 10, 12, 21, 61]:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.vardecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(OPLangParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(OPLangParser.ID)
            else:
                return self.getToken(OPLangParser.ID, i)

        def memberdecl(self):
            return self.getTypedRuleContext(OPLangParser.MemberdeclContext,0)


        def EXTENDS(self):
            return self.getToken(OPLangParser.EXTENDS, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_classdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassdecl" ):
                return visitor.visitClassdecl(self)
            else:
                return visitor.visitChildren(self)




    def classdecl(self):

        localctx = OPLangParser.ClassdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(OPLangParser.CLASS)
            self.state = 158
            self.match(OPLangParser.ID)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 159
                self.match(OPLangParser.EXTENDS)
                self.state = 160
                self.match(OPLangParser.ID)


            self.state = 163
            self.memberdecl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_CURL(self):
            return self.getToken(OPLangParser.L_CURL, 0)

        def memberlist(self):
            return self.getTypedRuleContext(OPLangParser.MemberlistContext,0)


        def R_CURL(self):
            return self.getToken(OPLangParser.R_CURL, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_memberdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberdecl" ):
                return visitor.visitMemberdecl(self)
            else:
                return visitor.visitChildren(self)




    def memberdecl(self):

        localctx = OPLangParser.MemberdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_memberdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(OPLangParser.L_CURL)
            self.state = 166
            self.memberlist()
            self.state = 167
            self.match(OPLangParser.R_CURL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(OPLangParser.MemberContext,0)


        def memberlist(self):
            return self.getTypedRuleContext(OPLangParser.MemberlistContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_memberlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberlist" ):
                return visitor.visitMemberlist(self)
            else:
                return visitor.visitChildren(self)




    def memberlist(self):

        localctx = OPLangParser.MemberlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_memberlist)
        try:
            self.state = 173
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 8, 10, 12, 18, 21, 22, 52, 61]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.member()
                self.state = 170
                self.memberlist()
                pass
            elif token in [47]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributedecl(self):
            return self.getTypedRuleContext(OPLangParser.AttributedeclContext,0)


        def methoddecl(self):
            return self.getTypedRuleContext(OPLangParser.MethoddeclContext,0)


        def constructordecl(self):
            return self.getTypedRuleContext(OPLangParser.ConstructordeclContext,0)


        def destructordecl(self):
            return self.getTypedRuleContext(OPLangParser.DestructordeclContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = OPLangParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_member)
        try:
            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.attributedecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.methoddecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 177
                self.constructordecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 178
                self.destructordecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributedeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def static_atom(self):
            return self.getTypedRuleContext(OPLangParser.Static_atomContext,0)


        def final_atom(self):
            return self.getTypedRuleContext(OPLangParser.Final_atomContext,0)


        def decl_type2(self):
            return self.getTypedRuleContext(OPLangParser.Decl_type2Context,0)


        def attributelist(self):
            return self.getTypedRuleContext(OPLangParser.AttributelistContext,0)


        def SEMI(self):
            return self.getToken(OPLangParser.SEMI, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_attributedecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributedecl" ):
                return visitor.visitAttributedecl(self)
            else:
                return visitor.visitChildren(self)




    def attributedecl(self):

        localctx = OPLangParser.AttributedeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attributedecl)
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.static_atom()
                self.state = 182
                self.final_atom()
                self.state = 183
                self.decl_type2()
                self.state = 184
                self.attributelist()
                self.state = 185
                self.match(OPLangParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 187
                self.final_atom()
                self.state = 188
                self.static_atom()
                self.state = 189
                self.decl_type2()
                self.state = 190
                self.attributelist()
                self.state = 191
                self.match(OPLangParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Static_atomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC(self):
            return self.getToken(OPLangParser.STATIC, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_static_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatic_atom" ):
                return visitor.visitStatic_atom(self)
            else:
                return visitor.visitChildren(self)




    def static_atom(self):

        localctx = OPLangParser.Static_atomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_static_atom)
        try:
            self.state = 197
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.match(OPLangParser.STATIC)
                pass
            elif token in [1, 8, 10, 12, 18, 21, 61]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Final_atomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FINAL(self):
            return self.getToken(OPLangParser.FINAL, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_final_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFinal_atom" ):
                return visitor.visitFinal_atom(self)
            else:
                return visitor.visitChildren(self)




    def final_atom(self):

        localctx = OPLangParser.Final_atomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_final_atom)
        try:
            self.state = 201
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 199
                self.match(OPLangParser.FINAL)
                pass
            elif token in [1, 8, 10, 12, 22, 61]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ampersand_atomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AMPERSAND(self):
            return self.getToken(OPLangParser.AMPERSAND, 0)

        def getRuleIndex(self):
            return OPLangParser.RULE_ampersand_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAmpersand_atom" ):
                return visitor.visitAmpersand_atom(self)
            else:
                return visitor.visitChildren(self)




    def ampersand_atom(self):

        localctx = OPLangParser.Ampersand_atomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ampersand_atom)
        try:
            self.state = 205
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 203
                self.match(OPLangParser.AMPERSAND)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributelistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributeprime(self):
            return self.getTypedRuleContext(OPLangParser.AttributeprimeContext,0)


        def COMMA(self):
            return self.getToken(OPLangParser.COMMA, 0)

        def attributelist(self):
            return self.getTypedRuleContext(OPLangParser.AttributelistContext,0)


        def getRuleIndex(self):
            return OPLangParser.RULE_attributelist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributelist" ):
                return visitor.visitAttributelist(self)
            else:
                return visitor.visitChildren(self)




    def attributelist(self):
